hphp/test/slow/inout/bad-call-8.php.expectf

Fatal error: syntax error, unexpected T_STRING, expecting T_VARIABLE or T_PIPE_VAR in %s/bad-call-8.php on line 3
